--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <h1>Italo R S Siqueira | WDD 130</h1>
             <img src="images/profile.b.jpg" alt="Hi my name is Italo Siqueira" width="200">
             <p>Hi my name is Italo Siqueira and I'm from São Paulo, Brazi, I'm from a small city called
-                Americana. I love to spend time wiht my family, play video games, sports and technology!
-                Something that I like to study is Tech, Investsments and Economy.
+                Americana. I love to spend time with my family, play video games, sports, and technology!
+                The subjects that I like to study are Tech, Investments, and Economy.
             </p>
         </main>
         <footer>
