--- a/week02/box-model.html
+++ b/week02/box-model.html
@@ -1,5 +1,5 @@
 <main>
-    <link rel="week02/styles" href="box-model.css">
+    <link rel="week02/stylesheet" href="box-model.css">
 	<div class="callout">
 		<img src="https://imgs.search.brave.com/GL5j37h36qNrZB32VnI6vK33NtodJhNnI5M-Kf_Xi-E/rs:fit:473:610:1/g:ce/aHR0cHM6Ly9pLnBp/bmltZy5jb20vb3Jp/Z2luYWxzL2Y3L2Vl/LzEzL2Y3ZWUxMzY2/YWVjZmViYzhkMjkx/Y2MyNWYwNGMyYjNm/LmpwZw" alt="Paul the Apostle" loading="lazy" width="150">
 		<blockquote>
