Changes to the Index

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Italo R S Siqueira | WDD 130</title>
+        <meta name="Description" content="Italo Siqueira wdd130 exercise skilss">
+        <meta name="author" content="Italo Siqueira">
         <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
@@ -22,6 +24,14 @@
                 The subjects that I like to study are Tech, Investments, and Economy.
             </p>
         </main>
+        <aside>
+            <h2>São Paulo Brazil</h2>
+            <p>São Paulo is the heart of Brazil, and all of the Economy runs there, it's different though, 
+                from Rio de Janeiro, where all the fun happens! São Paulo is huge, has many companies
+                from around the world and too many things to do! And just like every other big city,
+                it's dangerous and fun!
+            </p>
+        </aside>
         <footer>
             <p>&copy2024 👨‍💻 Italo Siqueira 💻 São Paulo, Brasil</p>
         </footer>
