--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -50,7 +50,7 @@
             <h3>Home Page Wireframe</h3>
             <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-home.png" alt="Home Page Wire Frame Exemple Design" width="700">
             <h3>About Us Page Wireframe</h3>
-            <img scr="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-aboutus-update.png" alt="About Us Page Wireframe Design" width="700">
+            <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-aboutus-update.png" alt="About Us Page Wireframe Design" width="700">
         </main>
         <footer>
             <p><p>&copy2024 👨‍💻 Rafting Site Document 💻Italo Siqueira 💻 WDD 130</p></p>
