--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -53,7 +53,7 @@
             <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-aboutus-update.png" alt="About Us Page Wireframe Design" width="700">
         </main>
         <footer>
-            <p><p>&copy2024 👨‍💻 Rafting Site Document 💻Italo Siqueira 💻 WDD 130</p></p>
+            <p>&copy&2024 👨‍💻 Rafting Site Document 💻Italo Siqueira 💻 WDD 130</p>
         </footer>
     </body>
 </html>
