--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Rafting Site Plan | Italo Siqueira</title>
-        <meta name="Description" content="White Water Rafting">
+        <meta name="Description" content="The Rafting Site Plan includes the site purpose, the target audience, branding information, and a style guide for the course website project.">
         <meta name="author" content="Italo Siqueira">
         <link rel="stylesheet" href="styles/site-plan-rafting.css">
     </head>
