--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -6,6 +6,7 @@
         <title>Rafting Site Plan | Italo Siqueira</title>
         <meta name="Description" content="The Rafting Site Plan includes the site purpose, the target audience, branding information, and a style guide for the course website project.">
         <meta name="author" content="Italo Siqueira">
+        <!--Link to the CSS and styles-->
         <link rel="stylesheet" href="styles/site-plan-rafting.css">
     </head>
     <body>
