Editing my Page with links and ajusting settings

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
                 <a href="#">Home</a>
                 <a href="wwr/">Rafting Website</a>
                 <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+                <a href="https://www.linkedin.com/in/22-italo-siqueira/">LinkedIn</a>
+                <a href="https://www.facebook.com/italo.rafael.10236/">Facebook</a>
             </nav>
         </header>
         <main>
@@ -21,19 +23,30 @@
             <img src="images/profile.b.jpg" alt="Hi my name is Italo Siqueira" width="200">
             <p>Hi my name is Italo Siqueira and I'm from São Paulo, Brazi, I'm from a small city called
                 Americana. I love to spend time with my family, play video games, sports, and technology!
-                The subjects that I like to study are Tech, Investments, and Economy.
+                The subjects that I like to study are Tech, Investments, and Economy. Something that I really like is to play FIFA, which stress me more then make me have
+                fun! But I still like to play other games such God of War, The Last of Us, Rocket League and so on!
+                I also like to spend time at the shopping mall, not expanding money, but eating out and checking the stores
+                with my family!
             </p>
+            <ul>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/rio-de-janeiro-brazil-temple" target="_blank">Rio de Janeiro Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/campinas-brazil-temple" target="_blank">Campinas Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/sao-paulo-brazil-temple" target="_blank">São Paulo Temple</a></li>
+            </ul>
         </main>
         <aside>
             <h2>São Paulo Brazil</h2>
             <p>São Paulo is the heart of Brazil, and all of the Economy runs there, it's different though, 
                 from Rio de Janeiro, where all the fun happens! São Paulo is huge, has many companies
                 from around the world and too many things to do! And just like every other big city,
-                it's dangerous and fun!
+                it's dangerous and fun! 
             </p>
         </aside>
+        <aside class="box"></aside>
+        <ul class="box"></ul>
         <footer>
             <p>&copy2024 👨‍💻 Italo Siqueira 💻 São Paulo, Brasil</p>
         </footer>
     </body>
+    <!--01/25/2024 = 10:05 pm-->
 </html>
