--- a/wwr/about.html
+++ b/wwr/about.html
@@ -19,7 +19,7 @@
         <main>
             <div class="hero">
                 <h1>Splash White Water Rafting</h1>
-                <img src="images/rafting58_600.jpg" alt="rafting image" width="1325" height="500">
+                <img src="images/littlecolorado-wide.jpg" alt="rafting image" width="1325" height="500">
                 <article class="stats">
                     <img src="images/rafting21_600.png"alt="client" width="100" height="100">
                     <p>"Ride the Rapids, Craft the Memories."
@@ -38,7 +38,7 @@
                 <img src="images/chuckwalla1.jpg"alt="Lizard" width="500" height="500">
                 <img src="images/rafting26_600.jpg"alt="Boats" width="500" height="500">
                 <img src="images/rafting42_600.jpg"alt="People Boat" width="500" height="500">
-                <img src="images/rafting52_600.jpg"alt="People River" width="500" height="500">
+                <img src="images/rafting52_600.jpg"alt="People River" width="500" height="00">
 
             </section>
         </main>
