Many Changes from the White Rafting Website

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -18,16 +18,15 @@
         </header>
         <main>
             <div class="hero">
-                <h1>Splash White Water Rafting</h1>
-                <img src="images/littlecolorado-wide.jpg" alt="rafting image" width="1325" height="500">
-                <article class="stats">
-                    <img src="images/rafting21_600.png"alt="client" width="100" height="100">
-                    <p>"Ride the Rapids, Craft the Memories."
-                        Our motto encapsulates the essence of Splash White Water Rafting. It speaks to the dynamic nature of rafting, the exhilaration of navigating rapids, and the profound memories that come from embracing the journey. We invite all adventurers to ride the currents with us and craft memories that last a lifetime.
-                    </p>
-                    </div>
-                </article>
+                <img src="images/salmon-kayak-banner2.jpg" alt="rafting image">
             </div>
+            <article class="stats">
+                <h1>Splash White Water Rafting</h1>
+                <img src="images/rafting21_600.png"alt="client" width="100" height="100">
+                <p>"Ride the Rapids, Craft the Memories."
+                    Our motto encapsulates the essence of Splash White Water Rafting. It speaks to the dynamic nature of rafting, the exhilaration of navigating rapids, and the profound memories that come from embracing the journey. We invite all adventurers to ride the currents with us and craft memories that last a lifetime.
+                </p>
+            </article>
             <section>
                 <h2>History</h2>
                 <p>Once, a group of friends passionate about rafting envisioned Splash White Water Rafting. Their goal: make rafting accessible to all. This virtual haven guides enthusiasts with expert advice, fosters community, and celebrates the spirit of exploration. Splash White Water Rafting is more than a guide; it's a celebration of wild rivers and unforgettable moments. 🚣‍♂️🌊</p>
