--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,59 +1,80 @@
 <!DOCTYPE html>
 <html lang="en-US">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="styles/rafting.css">
-        <title>About Us</title>
-    </head>
-    <body>
-        <header>
-            <img src="images/logo.png" alt="logo" width="100">
-            <nav>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/rafting.css">
+    <title>About Us</title>
+</head>
+
+<body>
+    <header>
+        <img src="images/logo.png" alt="logo" width="100">
+        <nav>
+            <ul class="navigation">
                 <a href="index.html">Index</a>
                 <a href="about.html">About Us</a>
                 <a href="trips.html">Trips</a>
                 <a href="contact.html">Contact</a>
-            </nav>
-        </header>
-        <main>
-            <div class="hero">
-                <img src="images/salmon-kayak-banner2.jpg" alt="rafting image">
-            </div>
-            <article class="stats">
-                <h1>Splash White Water Rafting</h1>
-                <img src="images/rafting21_600.png"alt="client" width="100" height="100">
-                <p>"Ride the Rapids, Craft the Memories."
-                    Our motto encapsulates the essence of Splash White Water Rafting. It speaks to the dynamic nature of rafting, the exhilaration of navigating rapids, and the profound memories that come from embracing the journey. We invite all adventurers to ride the currents with us and craft memories that last a lifetime.
-                </p>
-            </article>
-            <section>
-                <h2>History</h2>
-                <p>Once, a group of friends passionate about rafting envisioned Splash White Water Rafting. Their goal: make rafting accessible to all. This virtual haven guides enthusiasts with expert advice, fosters community, and celebrates the spirit of exploration. Splash White Water Rafting is more than a guide; it's a celebration of wild rivers and unforgettable moments. 🚣‍♂️🌊</p>
-            </section>
-            <section>
-                <h2>Adventure Awaits You!</h2>
-                <img src="images/rafting31_600.jpg"alt="People" width="500" height="500">
-                <img src="images/chuckwalla1.jpg"alt="Lizard" width="500" height="500">
-                <img src="images/rafting26_600.jpg"alt="Boats" width="500" height="500">
-                <img src="images/rafting42_600.jpg"alt="People Boat" width="500" height="500">
-                <img src="images/rafting52_600.jpg"alt="People River" width="500" height="00">
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div class="hero">
+            <img src="images/salmon-kayak-banner2.jpg" alt="rafting image">
+        </div>
+        <article class="stats">
+            <h1>Splash White Water Rafting</h1>
+            <img src="images/rafting21_600.png" alt="client" width="100" height="100">
+            <p>"Ride the Rapids, Craft the Memories."
+                Our motto encapsulates the essence of Splash White Water Rafting. It speaks to the dynamic nature of
+                rafting, the exhilaration of navigating rapids, and the profound memories that come from embracing the
+                journey. We invite all adventurers to ride the currents with us and craft memories that last a lifetime.
+            </p>
+        </article>
+        <section class="history">
+            <h2>History</h2>
+            <img src="images/businessmen-white-black-suits.jpg" alt="business" width="250">
+            <p>Once, a group of friends passionate about rafting envisioned Splash White Water Rafting. Their goal: make
+                rafting accessible to all. This virtual haven guides enthusiasts with expert advice, fosters community,
+                and celebrates the spirit of exploration. Splash White Water Rafting is more than a guide; it's a
+                celebration of wild rivers and unforgettable moments. 🚣‍♂️🌊</p>
+        </section>
+        <section class="adventures">
+            <h3>Adventure Awaits You!</h3>
+            <figure>
+                <img src="images/rafting31_600.jpg" alt="people" width="200" height="200">
+                <figcaption>Wild Trail</figcaption>
+            </figure>
+            <figure>
+                <img src="images/rafting26_600.jpg" alt="boats" width="200" height="200">
+                <figcaption>Calm Waters</figcaption>
+            </figure>
+            <figure>
+                <img src="images/rafting42_600.jpg" alt="raft" width="200" height="200">
+                <figcaption>Wild Johson</figcaption>
+            </figure>
+            <figure>
+                <img src="images/rafting52_600.jpg" alt="lake" width="200" height="200">
+                <figcaption>The Cascades</figcaption>
+            </figure>
+        </section>
+    </main>
+    <footer>
+        <p>&copy2024 🚣‍♂️ Splash White Water Rafting 🌊 Italo Siqueira 💻</p>
+        <nav class="sociallinks">
+            <a href="https://facebook.com">
+                <img src="images/Rounded_Facebook_svg-64.webp" alt="facebook" width="40" height="40">
+            </a>
+            <a href="https://twitter.com">
+                <img src="images/12942964.png" alt="twitter" width="40" height="40">
+            </a>
+            <a href="https://instagram.com">
+                <img src="images/Rounded_Instagram_svg-64.webp" alt="instagram" width="40" height="40">
+            </a>
+        </nav>
+    </footer>
+</body>
 
-            </section>
-        </main>
-        <footer>
-            <p>&copy2024 🚣‍♂️ Splash White Water Rafting 🌊 Italo Siqueira 💻</p>
-            <nav class="sociallinks">
-                <a href="https://facebook.com">
-                    <img src="images/5771766.png" alt="rafting image" width="50" height="50">
-                </a>
-                <a href="https://twitter.com">
-                    <img src="images/12942964.png" alt="rafting image" width="50" height="50">
-                </a>
-                <a href="https://instagram.com">
-                    <img src="images/3689123.png" alt="rafting image" width="50" height="50">
-                </a>
-            </nav>
-        </footer>
-    </body>
 </html>
