New Profile Pic

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="grid">
     <main>
         <h1>Italo R S Siqueira | WDD 130</h1>
-        <img src="images/profile.b.jpg" alt="Hi my name is Italo Siqueira" width="200">
+        <img src="images/new_pro.jpg" alt="Hi my name is Italo Siqueira" width="200">
         <p>Hi my name is Italo Siqueira and I'm from São Paulo, Brazi, I'm from a small city called
             Americana. I love to spend time with my family, play video games, sports, and technology!
             The subjects that I like to study are Tech, Investments, and Economy. Something that I really like is to
