--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -21,37 +21,36 @@
         </nav>
     </header>
     <main>
-        <img src="images/salmon-kayak-banner2.jpg" alt="rafting image" width="1200">
+        <img src="images/salmon-kayak-banner2.jpg" alt="rafting image" width='1'>
         <article class="stats">
             <form>
                 <fieldset class="form-item1">
-                <legend>Contact Information</legend>
-                        <label>Your Name:<input type="text" name="fullname"></label>
-                        <!-- Fullname and Email Address -->
-                        <label>Email:<input type="email" name="useremail"></label>
+                    <legend>Contact Information</legend>
+                    <label>Your Name:<input type="text" name="fullname"></label>
+                    <!-- Fullname and Email Address -->
+                    <label>Email:<input type="email" name="useremail"></label>
                 </fieldset>
                 <fieldset class="form-item">
-                            <label for="pet">Subscribe to our Newslatter</lable>
-                                <input type="checkbox" id="pet" name="pet">
-                    <label for="feedback">Your Message</label>
-                    <textarea id="feedback" name="feedback" rows="4"
-                        placeholder="Message"></textarea>
-                    <!--form elements will go here-->
-                    <button type="submit">Submit Poll</button>
+                    <label for="pet">Subscribe to our Newslatter</lable>
+                        <input type="checkbox" id="pet" name="pet">
+                        <label for="feedback">Your Message</label>
+                        <textarea id="feedback" name="feedback" rows="4" placeholder="Message"></textarea>
+                        <!--form elements will go here-->
+                        <button type="submit">Submit Poll</button>
                 </fieldset>
             </form>
-            <h1>Conect with us:</h1>
+            <h1>Connect with us:</h1>
             <p class="info1"> <span style="color: navy;">Address: </span>
                 1000 School Ave, Panama City, Florida, 32401</p>
             <p class="info2"><span style="color: navy;">Phone Number: </span>
                 (850) 215-4812</p>
             <p class="info3"><span style="color: navy;">Email: </span>
-                    contact@wwrafiting.com</p>
+                contact@wwrafiting.com</p>
             </p>
             <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d110747.51562808189!2d-85.16650024725949!3d29.8394665368702!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8894b05fb4906423%3A0x300086403883593a!2sCondado%20de%20Gulf!5e0!3m2!1spt-BR!2sbr!4v1707594773517!5m2!1spt-BR!2sbr"
-                    width="600" height="450" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d110747.51562808189!2d-85.16650024725949!3d29.8394665368702!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8894b05fb4906423%3A0x300086403883593a!2sCondado%20de%20Gulf!5e0!3m2!1spt-BR!2sbr!4v1707594773517!5m2!1spt-BR!2sbr"
+                width="600" height="450" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </article>
         <section class="adventures">
             <h3>Adventure Awaits You!</h3>
