--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/contact.css">
-    <title>About Us</title>
+    <title>Contact Us</title>
 </head>
 
 <body>
