Trips Page Layout

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/rafting.css">
+    <link rel="stylesheet" href="styles/trips.css">
     <title>Trips</title>
 </head>
 
@@ -22,43 +22,69 @@
     </header>
     <main>
         <div class="hero">
-            <img src="images/salmon-kayak-banner2.jpg" alt="rafting image">
+            <img src="images/wp4283749.jpg" alt="rafting image">
         </div>
         <article class="stats">
-            <h1>Splash White Water Rafting</h1>
-            <img src="images/rafting21_600.png" alt="client" width="100" height="100">
-            <p>"Ride the Rapids, Craft the Memories."
-                Our motto encapsulates the essence of Splash White Water Rafting. It speaks to the dynamic nature of
-                rafting, the exhilaration of navigating rapids, and the profound memories that come from embracing the
-                journey. We invite all adventurers to ride the currents with us and craft memories that last a lifetime.
-            </p>
+            <h1>Rafting Adventures You Will Never Forget</h1>
+            <img src="images/people1.jpg" alt="client1" class="client-image" width="200" height="150">
+            <img src="images/people2.jpg" alt="client2" class="client-image" width="200" height="150">
+            <div class="container">
+                <ul>
+                    <li>Die-Hard, Ridiculously Fun (and Safety-first)</li>
+                    <li>Top-Notch equipment</li>
+                    <li>Tons of Awesome photos from every trip</li>
+                    <li>Amazing group / corporate rafting trips the way they should be!</li>
+                    <li>Memories that will last a lifetime</li>
+                </ul>
+            </div>
         </article>
-        <section class="history">
-            <h2>History</h2>
-            <img src="images/businessmen-white-black-suits.jpg" alt="business" width="250">
-            <p>Once, a group of friends passionate about rafting envisioned Splash White Water Rafting. Their goal: make
-                rafting accessible to all. This virtual haven guides enthusiasts with expert advice, fosters community,
-                and celebrates the spirit of exploration. Splash White Water Rafting is more than a guide; it's a
-                celebration of wild rivers and unforgettable moments. 🚣‍♂️🌊</p>
-        </section>
         <section class="adventures">
             <h3>Adventure Awaits You!</h3>
-            <figure>
-                <img src="images/rafting31_600.jpg" alt="people" width="200" height="200">
-                <figcaption>Wild Trail</figcaption>
-            </figure>
-            <figure>
-                <img src="images/rafting26_600.jpg" alt="boats" width="200" height="200">
-                <figcaption>Calm Waters</figcaption>
-            </figure>
-            <figure>
-                <img src="images/rafting42_600.jpg" alt="raft" width="200" height="200">
-                <figcaption>Wild Johson</figcaption>
-            </figure>
-            <figure>
-                <img src="images/rafting52_600.jpg" alt="lake" width="200" height="200">
-                <figcaption>The Cascades</figcaption>
-            </figure>
+            <div class="adventures-item">
+                <img src="images/trip1.jpg" alt="trip1" class="trip-image">
+                <ul>
+                    <li>Meeting Time: 8:30 AM in Coloma on Weekdays</li>
+                    <li>8:30 AM or 12:00 PM on Weekends</li>
+                    <li>Length: 6 miles</li>
+                    <li>Time on water: 2 hours</li>
+                    <li>Class/Level: II - III</li>
+                    <li>Cost range: $79 - $99</li>
+                    <a href="reservar.html">Book Now</a>   
+                </ul>               
+            </div>
+            <div class="adventures-item">
+                <img src="images/trip2.jpg" alt="trip2" class="trip-image">
+                <ul>
+                    <li>Meeting Time: 12:30 PM</li>
+                    <li>Length: 15 miles</li>
+                    <li>Time on water: 3.5 Hours</li>
+                    <li>Class/Level: II - III</li>
+                    <li>Cost range: $99 - $129</li>
+                    <a href="reservar.html">Book Now</a>
+                </ul>
+            </div>
+            <div class="adventures-item">
+                <img src="images/trip3.jpg" alt="trip3" class="trip-image">
+                <ul>
+                    <li>Meeting Time: 10:00 AM</li>
+                    <li>Length: 15 miles</li>
+                    <li>Time on water: 6 Hours including lunch</li>
+                    <li>Class/Level: II - III</li>
+                    <li>Cost range: $119 - $149</li>
+                    <a href="reservar.html">Book Now</a>
+                </ul>
+            </div>
+            <div class="adventures-item">
+                <img src="images/trip4.jpg" alt="trip4" class="trip-image">
+                <ul>
+                    <li>Meeting Time: 7:00 AM in Coloma or 9:00 AM in Auburn</li>
+                    <li>Length: 18 miles</li>
+                    <li>Time on water: 6 Hours including lunch</li>
+                    <li>Class/Level: III - IV</li>
+                    <li>Cost range: $139 - $179</li>
+                    <a href="reservar.html">Book Now</a>
+                </ul>          
+            </div>
         </section>
     </main>
     <footer>
@@ -76,5 +102,6 @@
         </nav>
     </footer>
 </body>
+<!--I stoped editing the page of the pictures coping from the site on the BYU Studies Set of Pages on my browser-->
 
 </html>
