Homepage White Rafting Website

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,7 +13,7 @@
         <img src="images/logo.png" alt="logo" width="100">
         <nav>
             <ul class="navigation">
-                <a href="index.html">Index</a>
+                <a href="index.html">Home</a>
                 <a href="about.html">About Us</a>
                 <a href="trips.html">Trips</a>
                 <a href="contact.html">Contact</a>
@@ -22,7 +22,7 @@
     </header>
     <main>
         <div class="hero">
-            <img src="images/salmon-kayak-banner2.jpg" alt="rafting image">
+            <img src="images/splash.jpg" alt="rafting image">
         </div>
         <article class="stats">
             <h1>Splash White Water Rafting</h1>
