--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -13,7 +13,7 @@
         <img src="images/logo.png" alt="logo" width="100">
         <nav>
             <ul class="navigation">
-                <a href="index.html">Index</a>
+                <a href="index.html">Home</a>
                 <a href="about.html">About Us</a>
                 <a href="trips.html">Trips</a>
                 <a href="contact.html">Contact</a>
