--- a/wwr/index.html
+++ b/wwr/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/index.css">
     <title>Home</title>
 </head>
+
 <body>
     <header>
         <img src="images/logo.png" alt="logo" width="100">
@@ -24,7 +25,7 @@
             <input type="radio" id="slide1" name="slides" checked>
             <input type="radio" id="slide2" name="slides">
             <input type="radio" id="slide3" name="slides">
-       
+
             <div class="slides">
                 <div class="slide" id="first">
                     <img src="images/imagem1.jpg" alt="Imagem 1">
@@ -36,11 +37,11 @@
                     <img src="images/imagem3.jpg" alt="Imagem 3">
                 </div>
             </div>
-            <div class="navigation-slide">
-                <lable for="slide1"></lable>
-                <lable for="slide2"></lable>
-                <lable for="slide3"></lable>
-            </div>
+        </div>
+        <div class="navigation">
+            <lable for="slide1"></lable>
+            <lable for="slide2"></lable>
+            <lable for="slide3"></lable>
         </div>
         </section>
         <section class="newslatter">
