--- a/wwr/index.html
+++ b/wwr/index.html
@@ -30,19 +30,20 @@
                 <div class="slide" id="first">
                     <img src="images/imagem1.jpg" alt="Imagem 1">
                 </div>
-                <div class="slide">
+                <!-- <div class="slide">
                     <img src="images/imagem2.jpg" alt="Imagem 2">
                 </div>
                 <div class="slide">
                     <img src="images/imagem3.jpg" alt="Imagem 3">
                 </div>
-            </div>
+            </div> -->
         </div>
         <div class="navigation">
             <lable for="slide1"></lable>
             <lable for="slide2"></lable>
             <lable for="slide3"></lable>
         </div>
+        <script src="script.js"></script>
         </section>
         <section class="newslatter">
             <h2>Sign Up for our Newslatter</h2>
