Changes on the homepage

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
     <title>Home</title>
 </head>
 
@@ -22,39 +25,37 @@
     </header>
     <main>
         <div class="carousel">
-            <input type="radio" id="slide1" name="slides" checked>
-            <input type="radio" id="slide2" name="slides">
-            <input type="radio" id="slide3" name="slides">
-
-            <div class="slides">
                 <div class="slide" id="first">
                     <img src="images/imagem1.jpg" alt="Imagem 1">
                 </div>
-                <!-- <div class="slide">
-                    <img src="images/imagem2.jpg" alt="Imagem 2">
-                </div>
-                <div class="slide">
-                    <img src="images/imagem3.jpg" alt="Imagem 3">
-                </div>
-            </div> -->
-        </div>
-        <div class="navigation">
-            <lable for="slide1"></lable>
-            <lable for="slide2"></lable>
-            <lable for="slide3"></lable>
-        </div>
-        <script src="script.js"></script>
-        </section>
-        <section class="newslatter">
-            <h2>Sign Up for our Newslatter</h2>
-            <form action="#" method="POST">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-                <button type="submit">Sign Up</button>
-            </form>
-        </section>
+            </div>
+            <div class="navigation">
+                <lable for="slide1"></lable>
+                <lable for="slide2"></lable>
+                <lable for="slide3"></lable>
+            </div>  
+            </section>
+            <article class="stats">
+                <h1>Welcome to the adventure of your dreams!</h1>
+                <p>Get ready for an exhilarating experience that will take you through the wild and thrilling waters of
+                the most challenging rivers. At our White Water Rafting center, every wave is an opportunity to feel
+                the adrenaline rushing through your veins and create memories that will last a lifetime.</p>
+
+                <p>Navigate through the rapids, feel the energy of nature, and discover the true meaning of adventure.
+                If you're ready to embark on this unforgettable journey, get in touch with us today! Our dedicated
+                team is ready to help you plan your next thrilling getaway.</p>
+                <p>Don't waste any time! Contact us now and start your next great adventure.</p>
+            </article>
+            <section class="newslatter">
+                <h2>Sign Up for our Newslatter</h2>
+                <form action="#" method="POST">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" required>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+                    <button type="submit">Sign Up</button>
+                </form>
+            </section>
     </main>
     <footer>
         <p>&copy2024 🚣‍♂️ Splash White Water Rafting 🌊 Italo Siqueira 💻</p>
