--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -53,7 +53,7 @@
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </article>
         <section class="adventures">
-            <h3>Adventure Awaits You!</h3>
+            <h3>Our Team of Employees!</h3>
             <figure>
                 <img src="images/employee1.webp" alt="people" width="200" height="200">
                 <figcaption>Jeniffer Walter</figcaption>
