--- a/wwr/index.html
+++ b/wwr/index.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+<html style="width: 100%; height: 100%">
+  <!-- Your page content here -->
+</html>
     <header>
         <img src="images/logo.png" alt="logo" width="100">
         <nav>
