--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <a href="#">Home</a>
-            <a href="wwr/">Rafting Website</a>
+            <a href="wwr/about.html">Rafting Website</a>
             <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
             <a href="https://www.linkedin.com/in/22-italo-siqueira/">LinkedIn</a>
             <a href="https://www.facebook.com/italo.rafael.10236/">Facebook</a>
