--- a/wwr/index.html
+++ b/wwr/index.html
@@ -12,35 +12,30 @@
 </head>
 
 <body>
-<html style="width: 100%; height: 100%">
-  <!-- Your page content here -->
-</html>
     <header>
         <img src="images/logo.png" alt="logo" width="100">
         <nav>
             <ul class="navigation">
-                <a href="index.html">Home</a>
-                <a href="about.html">About Us</a>
-                <a href="trips.html">Trips</a>
-                <a href="contact.html">Contact</a>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="trips.html">Trips</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        </section>
         <article class="stats">
             <h1>Welcome to the adventure of your dreams!</h1>
             <p>Get ready for an exhilarating experience that will take you through the wild and thrilling waters of
                 the most challenging rivers. At our White Water Rafting center, every wave is an opportunity to feel
                 the adrenaline rushing through your veins and create memories that will last a lifetime.</p>
-
             <p>Navigate through the rapids, feel the energy of nature, and discover the true meaning of adventure.
                 If you're ready to embark on this unforgettable journey, get in touch with us today! Our dedicated
                 team is ready to help you plan your next thrilling getaway.</p>
             <p>Don't waste any time! Contact us now and start your next great adventure.</p>
         </article>
-        <section class="newslatter">
-            <h2>Sign Up for our Newslatter</h2>
+        <section class="newsletter">
+            <h2>Sign Up for our Newsletter</h2>
             <form action="#" method="POST">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
@@ -51,7 +46,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy2024 🚣‍♂️ Splash White Water Rafting 🌊 Italo Siqueira 💻</p>
+        <p>&copy; 2024 🚣‍♂️ Splash White Water Rafting 🌊 Italo Siqueira 💻</p>
         <nav class="sociallinks">
             <a href="https://facebook.com">
                 <img src="images/Rounded_Facebook_svg-64.webp" alt="facebook" width="40" height="40">
@@ -65,6 +60,5 @@
         </nav>
     </footer>
 </body>
-<!--I stoped editing the page of the pictures coping from the site on the BYU Studies Set of Pages on my browser-->
 
 </html>
