--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,10 +13,10 @@
         <img src="images/logo.png" alt="logo" width="100">
         <nav>
             <ul class="navigation">
-                <a href="index.html">Home</a>
-                <a href="about.html">About Us</a>
-                <a href="trips.html">Trips</a>
-                <a href="contact.html">Contact</a>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="trips.html">Trips</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -26,7 +26,7 @@
         </div>
         <article class="stats">
             <h1>Splash White Water Rafting</h1>
-            <img src="images/rafting21_600.png" alt="client" width="100" height="100">
+            <img src="images/rafting21_600.png" alt="client">
             <p>"Ride the Rapids, Craft the Memories."
                 Our motto encapsulates the essence of Splash White Water Rafting. It speaks to the dynamic nature of
                 rafting, the exhilaration of navigating rapids, and the profound memories that come from embracing the
@@ -35,7 +35,7 @@
         </article>
         <section class="history">
             <h2>History</h2>
-            <img src="images/businessmen-white-black-suits.jpg" alt="business" width="250">
+            <img src="images/businessmen-white-black-suits.jpg" alt="business">
             <p>Once, a group of friends passionate about rafting envisioned Splash White Water Rafting. Their goal: make
                 rafting accessible to all. This virtual haven guides enthusiasts with expert advice, fosters community,
                 and celebrates the spirit of exploration. Splash White Water Rafting is more than a guide; it's a
@@ -44,25 +44,25 @@
         <section class="adventures">
             <h3>Adventure Awaits You!</h3>
             <figure>
-                <img src="images/rafting31_600.jpg" alt="people" width="200" height="200">
+                <img src="images/rafting31_600.jpg" alt="people">
                 <figcaption>Wild Trail</figcaption>
             </figure>
             <figure>
-                <img src="images/rafting26_600.jpg" alt="boats" width="200" height="200">
+                <img src="images/rafting26_600.jpg" alt="boats">
                 <figcaption>Calm Waters</figcaption>
             </figure>
             <figure>
-                <img src="images/rafting42_600.jpg" alt="raft" width="200" height="200">
-                <figcaption>Wild Johson</figcaption>
+                <img src="images/rafting42_600.jpg" alt="raft">
+                <figcaption>Wild Johnson</figcaption>
             </figure>
             <figure>
-                <img src="images/rafting52_600.jpg" alt="lake" width="200" height="200">
+                <img src="images/rafting52_600.jpg" alt="lake">
                 <figcaption>The Cascades</figcaption>
             </figure>
         </section>
     </main>
     <footer>
-        <p>&copy2024 🚣‍♂️ Splash White Water Rafting 🌊 Italo Siqueira 💻</p>
+        <p>&copy; 2024 🚣‍♂️ Splash White Water Rafting 🌊 Italo Siqueira 💻</p>
         <nav class="sociallinks">
             <a href="https://facebook.com">
                 <img src="images/Rounded_Facebook_svg-64.webp" alt="facebook" width="40" height="40">
